--- a/frontend/src/assets/css/header.css
+++ b/frontend/src/assets/css/header.css
@@ -35,9 +35,7 @@
   align-items: center;
   gap: 5px;
   cursor: pointer;
-
-  /* position: absolute; */
-  /* right: 50px; */
+  transition: 0.2s linear;
 }
 #account-center:hover {
   box-shadow: 0px 0px 10px 0px #9040dd;
@@ -108,5 +106,8 @@
   }
   .header {
     padding: 18px 18px;
+  }
+  #parent-of-container {
+    right: 25px;
   }
 }
